syntax = "proto3"; //版本声明

option go_package = "grpc_helloclient/pb"; //项目中import 导入生成的go代码的名称

package pb;  // proto文件模块,必须与server端一致

// 定义服务
service Greeter {
  // 定义方法
  rpc LotsOfReplies (HelloRequest)returns(stream HelloResponse);
  rpc LotsOfGreetings(stream HelloRequest)returns(HelloResponse);

}

// 定义消息
message HelloRequest{
  string name = 1; // 字段号
}

message HelloResponse{
  string reply = 1;
}